* Improve support for builder pattern, stubs now return themselves if the return type matches the type of the stub
* Improve tapestry support with by supporting `@ImportModule`
* Improve `constructorArgs` for spies can now accept a map directly without the need to wrap it in a list
* General dependency update

Thanks to all the contributors to this release: Rob Elliot, jochenberger, Jan Papenbrock, Paul King, Marcin Zajączkowski, mrb-twx

=== Known Issues
* Groovy 2.4.10 introduced a bug that interfered with the way `verifyAll` works, it has been fixed in 2.4.12

== 1.1 (2017-05-01)

=== What's New In This release

* Update docs to include info/examples for Spying instantiated objects
* Fix integer overflow that could occur when the OutOfMemoryError protection while comparing huge strings kicked in
* Improve rendering for OutOfMemoryError protection

== 1.1-rc-4 (2017-03-28)

This should be the last rc for 1.1

=== What's New In This release

* 15 merged pull requests
* Spies can now be created with an already existing target
* Fix for scoped Spring Beans
* Fix incompatibility with Spring 2/3 that was introduced in 1.1-rc-1
* Fix groovy compatibility
* Fix ByteBuddy compatibility
* Fix OutOfMemoryError when comparing huge strings
* Improve default response for `java.util.Optional<T>`, will now return empty optional
* Improve detection of Spring Boot tests
* Improve documentation for global extensions

Thanks to all the contributors to this release: Taylor Wicksell, Rafael Winterhalter, Marcin Zajączkowski, Eduardo Grajeda, Paul King, Andrii, Björn Kautler, Libor Rysavy

Known issues with groovy 2.4.10 which breaks a smoke test, but should have little impact on normal use (#709).

== 1.1-rc-3 (released 2016-10-17)

Adds compatibility with ByteBuddy as an alternative to cglib for generating mocks and stubs for classes.

== 1.1-rc-2 (released 2016-08-22)

1.1 should be here soon but in the meantime there's a new release candidate.

=== What's New In This release
